Finish up desktop version

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,76 @@ h2 {
     margin-left: 8rem;
 }
 
+.stars {
+    white-space: nowrap;
+    padding-right: 2rem;
+}
+
+/* BOTTOM STYLING */
+.cards-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 8rem;
+    margin-right: 8rem;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+}
+
+.desktop.bottom-bg {
+	bottom: -1;
+	right: 0;
+	position: absolute;
+	width: auto;
+	height: auto;
+	z-index: -10;
+}
+
+.card {
+    font-size: 15px;
+    background-color: hsl(300, 43%, 22%);
+    border-radius: 10px;
+    padding: 2rem;
+    width: 32%;
+    height: 32%;
+}
+
+.card * {
+    padding: 0;
+    margin: 0;
+}
+
+.irene-container {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 2rem;
+}
+
+.anne-container {
+    margin-top: 4rem;
+}
+
+.user, .quotes {
+    color: hsl(0, 0%, 100%);
+}
+
+.verified {
+    color: hsl(333, 80%, 67%);
+    margin-bottom: 1rem;
+}
+
+.profile-pic {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-right: 1rem;
+}
+
+.review-heading {
+    display: flex;
+    flex-direction: row;
+}
+
 /* ATTRIBUTION STYLING */
 .attribution {
     font-size: 11px;
