--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,60 @@ h2 {
     flex-direction: row;
 }
 
+@media only screen and (max-width: 1000px) {
+
+	.header-container {
+		display: flex;
+		margin-left: 2rem;
+		margin-right: 2rem;
+        margin-top: 4rem;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+	}
+
+	.ratings {
+		margin: 0;
+		margin-bottom: 1rem;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.header-container-right {
+		margin-top: 2rem;
+	}
+
+	h1, h2 {
+		text-align: center;
+	}
+
+	.cards-container {
+		display: flex;
+		flex-direction: column;
+        align-items: center;
+        justify-content: center;
+		margin-left: 2rem;
+		margin-right: 2rem;
+		margin-top: 1rem;
+		margin-bottom: 1rem;
+	}
+
+	.irene-container, .anne-container {
+		margin: 0;
+	}
+
+	.card {
+		padding: 2rem;
+		width: auto;
+		margin-bottom: 1rem;
+	}
+
+
+
+}
+
 /* ATTRIBUTION STYLING */
 .attribution {
     font-size: 11px;
